--- a/jsontocsv.ipynb
+++ b/jsontocsv.ipynb
@@ -16,11 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "source": [
-    "def normalize(networkfile, networkfileclean):# Opening JSON file and loading the data into the variable data\r\n",
+    "def normalize(networkfile):# Opening JSON file and loading the data into the variable data\r\n",
     "    data_folder = Path(\"../CSGOreplaysfiles/\")\r\n",
     "    json_file = data_folder / networkfile\r\n",
+    "    networkfileclean = networkfile.replace(\"_filtered.json\",\"_networkdata_clean.csv\")\r\n",
+    "    print(networkfileclean)\r\n",
     "    with open(json_file) as file:\r\n",
     "        data = json.load(file)\r\n",
     "    # Flatten json data\r\n",
@@ -52,16 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "source": [
-    "normalize(\"june25_2_filtered.json\", \"june25_2_networkdata_clean.csv\")"
+    "normalize(\"june25_2_filtered.json\")"
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1280.0\n"
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'Replace'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-494f3707553d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnormalize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"june25_2_filtered.json\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-5-f5d188684c99>\u001b[0m in \u001b[0;36mnormalize\u001b[1;34m(networkfile)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mdata_folder\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../CSGOreplaysfiles/\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mjson_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_folder\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mnetworkfile\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mnetworkfileclean\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnetworkfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mReplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"_filtered.json\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"_networkdata_clean.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnetworkfileclean\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson_file\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'Replace'"
      ]
     }
    ],
