--- a/jsontocsv.ipynb
+++ b/jsontocsv.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "normalize(\"june25_2_filtered.json\")"
+    "normalize(\"file_filtered.json\")"
    ],
    "outputs": [
     {
